fixed viking attack button text, created separate js file for interactive viking game

--- a/index.html
+++ b/index.html
@@ -101,9 +101,10 @@
     </div>
 
     <div class="viking-attack-div">
-        <button>Oh Shit, Vikings!</button>
+        <button>Viking Attack</button>
     </div>
 
     <script src="src/viking.js"></script>
+    <script src="viking-gamified.js"></script>
 </body>
 </html>
