--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -4,7 +4,11 @@
     <meta charset="utf-8" />
     <title>Jasmine Spec Runner v2.8.0</title>
 
-    <link rel="shortcut icon" type="image/png" href="jasmine/jasmine-2.8.0/jasmine_favicon.png" />
+    <link
+      rel="shortcut icon"
+      type="image/png"
+      href="jasmine/jasmine-2.8.0/jasmine_favicon.png"
+    />
     <link rel="stylesheet" href="jasmine/jasmine-2.8.0/jasmine.css" />
 
     <script src="jasmine/jasmine-2.8.0/jasmine.js"></script>
@@ -13,6 +17,7 @@
 
     <!-- include source files here... -->
     <script src="src/viking.js"></script>
+    <script src="src/test.js"></script>
 
     <!-- include spec files here... -->
     <script src="tests/viking.spec.js"></script>
